--- a/propaganda_backend/requirements.txt
+++ b/propaganda_backend/requirements.txt
@@ -1,7 +1,8 @@
 fastapi
 uvicorn[standard]
 scikit-learn
-tensorflow==2.12.0  # or your tested version
+tensorflow==2.11.0
+keras==2.11.0
 pandas
 numpy
 joblib
